2007-11-10  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-diff-internal): Make the *vc-diff* buffer read only.

	* vc-svn.el (vc-svn-print-log, vc-svn-diff):
	* vc-mcvs.el (vc-mcvs-print-log, vc-mcvs-annotate-command):
	* vc-cvs.el (vc-cvs-print-log, vc-cvs-diff)
	(vc-cvs-annotate-command):
	* vc-arch.el (vc-arch-diff): Remove test to check if start-process
	is bound, it always is.

2007-11-10  Jason Rumney  <jasonr@gnu.org>

	* term/w32-win.el (w32-initialize-window-system): Move SJIS font
	setup here from global scope.

2007-11-10  Juanma Barranquero  <lekktu@gmail.com>

	* ido.el (ido-save-history): Save the history file in UTF-8, not
	the current filename coding system.

2007-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (interprogram-cut-function, interprogram-paste-function):
	Don't make them frame-local any more.

	* faces.el (x-create-frame-with-faces, tty-create-frame-with-faces):
	Don't set interprogram-(cut|paste)-function on each frame.

	* term/x-win.el (x-select-text, x-cut-buffer-or-selection-value):
	Make them work in tty frames.
	(interprogram-cut-function, interprogram-paste-function):
	Set them globally.

2007-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* international/iso-cvt.el (iso-spanish, iso-german, iso-iso2tex)
	(iso-tex2iso, iso-gtex2iso, iso-iso2gtex, iso-iso2duden): Doc fixes.
	(iso-iso2duden-trans-tab): Add docstring.

2007-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* abbrev.el (define-abbrev-table): Record the variable definition.

	* emacs-lisp/bytecomp.el (byte-compile-file-form-define-abbrev-table):
	New function.

2007-11-09  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el: Clean the code for checking suitable Emacs version.
	(ps-do-despool): If ps-lpr-switches is not a list, force it to be one.
	(ps-print-version): New version 6.8.1.

2007-11-09  Juanma Barranquero  <lekktu@gmail.com>

	* files.el (enable-local-variables): Doc fix.

2007-11-09  Nick Roberts  <nickrob@snap.net.nz>
